objects/PC_Engagement_Program_Product__c.object
<CustomObject>
    <description>Junction object for the many to many association of the program to the product. Single program can be assigned to multiple products under same brand or vise versa - A single product can have multiple programs associated to it.</description>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <description>Lookup to the engagement program associated with the product.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Engagement Program Product</relationshipLabel>
        <relationshipName>Engagement_Program_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer__c</fullName>
        <description>The name of the manufacturer with which the product and program are associated.</description>
        <formula>PC_Engagement_Program__r.PC_Manufacturer__r.Name</formula>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product associated with the engagement program.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Engagement Program Product</relationshipLabel>
        <relationshipName>Engagement_Program_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Engagement Program Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Program Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>